plugins {
    //spring
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    //kotlin
    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.3.20'
    id 'org.jetbrains.kotlin.plugin.jpa' version '2.3.20'
    id 'com.google.devtools.ksp' version '2.3.6'
    id 'jacoco'
    id 'com.epages.restdocs-api-spec' version '0.19.4'
}

group = 'com.kdongsu5509'
version = '0.0.1-SNAPSHOT'
description = 'ImHere Integrated Project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // KOTLIN
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'

    // JWT & SECURITY
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // DATA (JPA, Redis, PostgreSQL)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
    implementation 'org.postgresql:postgresql'

    // EXTERNAL SDKs For SMS
    implementation 'net.nurigo:sdk:4.3.0'
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // WEB & VALIDATION
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // QUERY DSL
    implementation("io.github.openfeign.querydsl:querydsl-jpa:7.1")
    ksp("io.github.openfeign.querydsl:querydsl-ksp-codegen:7.1")

    // LOMBOK
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // TEST
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:postgresql'

    // TEST Docs
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.2'
    testImplementation 'com.h2database:h2'
}

kotlin {
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict'
    }
    sourceSets {
        main.kotlin.srcDirs += 'build/generated/ksp/main/kotlin'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

allOpen {
    annotation 'jakarta.persistence.Entity'
    annotation 'jakarta.persistence.MappedSuperclass'
    annotation 'jakarta.persistence.Embeddable'
}

openapi3 {
    setServer("http://localhost:8080")
    title = "ImHere API 문서"
    description = "User & Notification 통합 API 문서"
    version = "0.0.1"
    format = "yaml"
}

tasks.register("copyOasToSwagger", Copy) {
    dependsOn "openapi3"
    from "build/api-spec/openapi3.yaml"
    into "src/main/resources/static/docs"
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    finalizedBy 'jacocoTestReport', 'copyOasToSwagger'
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = false
        csv.required = false
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/dto/**", "**/config/**", "**/exception/**",
                    "**/common/**", "**/domain/**", "**/*Entity*",
                    "**/port/**", "**/Q*", "**/*Application*"
            ])
        }))
    }
}